gl33-master/src/test/deca/context/invalid/other/ifthenelse_fausse_string.deca
// Invalid
// ifthenelse fausse

{
    String s = "true";
    
    if(s){
        println("non");
    }


}
